// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders a NavLink 1`] = `
.emotion-0 {
  font-family: IBM Plex Sans,Lucida Grande,Tahoma,Verdana,Arial,sans-serif;
  font-size: 14px;
  line-height: 1.57;
  color: #2E3338;
  font-size: 14px;
  line-height: 1.57;
  color: #2E3338;
  color: #2E3338;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-family: IBM Plex Sans,Lucida Grande,Tahoma,Verdana,Arial,sans-serif;
  font-size: 14px;
  line-height: 1.57;
  color: #2E3338;
  color: #8F9BA3;
  cursor: default;
}

<NavLink
  activeClassName="foobar--active"
  disabled={true}
  external={true}
  to="foobar"
>
  <a
    activeClassName="foobar--active"
    className="emotion-0 emotion-1"
  />
</NavLink>
`;

exports[`renders a default NavLink 1`] = `
.emotion-0 {
  font-family: IBM Plex Sans,Lucida Grande,Tahoma,Verdana,Arial,sans-serif;
  font-size: 14px;
  line-height: 1.57;
  color: #2E3338;
  font-size: 14px;
  line-height: 1.57;
  color: #2E3338;
  color: #2E3338;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<NavLink
  to="foobar"
>
  <ForwardRef(render)>
    <a
      aria-current={null}
      className="emotion-0 emotion-1"
      href="/foobar"
      onClick={[Function]}
    />
  </ForwardRef(render)>
</NavLink>
`;

exports[`renders an item where label as defined 1`] = `
<div
  data-context="label"
>
  Children
</div>
`;

exports[`renders the expected markup 1`] = `
.emotion-42 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 0;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
}

.emotion-1 {
  font-family: IBM Plex Sans,Lucida Grande,Tahoma,Verdana,Arial,sans-serif;
  font-size: 14px;
  line-height: 1.57;
  color: #2E3338;
  font-size: 14px;
  line-height: 1.57;
  color: #2E3338;
  color: #2E3338;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-3 {
  font-family: IBM Plex Sans,Lucida Grande,Tahoma,Verdana,Arial,sans-serif;
  font-size: 14px;
  line-height: 1.57;
  color: #2E3338;
  font-weight: bold;
}

.emotion-8 {
  padding-left: 10px;
  padding-right: 10px;
  font-family: IBM Plex Sans,Lucida Grande,Tahoma,Verdana,Arial,sans-serif;
  font-size: 14px;
  line-height: 1.57;
  color: #2E3338;
  font-size: 14px;
  line-height: 1.57;
  color: #2E3338;
  color: #8F9BA3;
}

.emotion-6 {
  font-family: 'quid-icons' !important;
  speak: none;
  font-style: normal;
  font-weight: normal;
  font-variant: normal;
  text-transform: none;
  line-height: inherit;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  font-feature-settings: 'liga';
  font-variant-ligatures: discretionary-ligatures;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 1em;
  width: 1em;
}

.emotion-29 {
  font-family: IBM Plex Sans,Lucida Grande,Tahoma,Verdana,Arial,sans-serif;
  font-size: 14px;
  line-height: 1.57;
  color: #2E3338;
  font-size: 14px;
  line-height: 1.57;
  color: #2E3338;
  color: #2E3338;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-family: IBM Plex Sans,Lucida Grande,Tahoma,Verdana,Arial,sans-serif;
  font-size: 14px;
  line-height: 1.57;
  color: #2E3338;
  color: #8F9BA3;
  cursor: default;
}

.emotion-38 {
  font-family: IBM Plex Sans,Lucida Grande,Tahoma,Verdana,Arial,sans-serif;
  font-size: 14px;
  line-height: 1.57;
  color: #2E3338;
  font-size: 14px;
  line-height: 1.57;
  color: #2E3338;
  color: #2E3338;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-family: IBM Plex Sans,Lucida Grande,Tahoma,Verdana,Arial,sans-serif;
  font-size: 14px;
  line-height: 1.57;
  color: #2E3338;
  font-weight: bold;
}

<Breadcrumb
  items={
    Array [
      Object {
        "arrowIcon": "angle_double_right",
        "label": "Project Name 13",
        "path": "/",
      },
      Object {
        "label": "SEARCH",
        "path": "/search",
        "tooltip": "project AND name",
      },
      Object {
        "label": "REVIEW",
        "path": "/search/review",
      },
      Object {
        "disabled": true,
        "label": "ANALYZE",
        "path": "/search/review/analyze",
      },
      Object {
        "emphasized": true,
        "external": true,
        "label": "SHARE",
        "path": "/search/review/analyze/share",
      },
    ]
  }
>
  <nav
    className="emotion-42 emotion-43"
  >
    <Item
      index={0}
      key="0_item"
      label="Project Name 13"
      path="/"
    >
      <NavLink
        className="emotion-4 emotion-0"
        disabled={false}
        emphasized={false}
        external={false}
        key="0"
        to="/"
      >
        <ForwardRef(render)>
          <a
            aria-current="page"
            className="emotion-0 emotion-1 emotion-2 emotion-3"
            href="/"
            onClick={[Function]}
            style={Object {}}
          >
            Project Name 13
          </a>
        </ForwardRef(render)>
      </NavLink>
    </Item>
    <Arrow
      key="0_arrow"
    >
      <div
        className="emotion-8 emotion-9"
      >
        <Icon
          name="angle_double_right"
          squared={true}
        >
          <i
            className="emotion-6 emotion-7"
          >
            angle_double_right
          </i>
        </Icon>
      </div>
    </Arrow>
    <Item
      index={1}
      key="1_item"
      label="SEARCH"
      path="/search"
      tooltip="project AND name"
    >
      <NavLink
        className="emotion-4 emotion-0"
        disabled={false}
        emphasized={false}
        external={false}
        key="1"
        to="/search"
      >
        <ForwardRef(render)>
          <a
            aria-current={null}
            className="emotion-0 emotion-1 emotion-2"
            href="/search"
            onClick={[Function]}
          >
            <span
              id="breadcrumb-1-tooltip"
              title="project AND name"
            >
              SEARCH
            </span>
          </a>
        </ForwardRef(render)>
      </NavLink>
    </Item>
    <Arrow
      key="1_arrow"
    >
      <div
        className="emotion-8 emotion-9"
      >
        <Icon
          name="angle_right"
          squared={true}
        >
          <i
            className="emotion-6 emotion-7"
          >
            angle_right
          </i>
        </Icon>
      </div>
    </Arrow>
    <Item
      index={2}
      key="2_item"
      label="REVIEW"
      path="/search/review"
    >
      <NavLink
        className="emotion-4 emotion-0"
        disabled={false}
        emphasized={false}
        external={false}
        key="2"
        to="/search/review"
      >
        <ForwardRef(render)>
          <a
            aria-current={null}
            className="emotion-0 emotion-1 emotion-2"
            href="/search/review"
            onClick={[Function]}
          >
            REVIEW
          </a>
        </ForwardRef(render)>
      </NavLink>
    </Item>
    <Arrow
      key="2_arrow"
    >
      <div
        className="emotion-8 emotion-9"
      >
        <Icon
          name="angle_right"
          squared={true}
        >
          <i
            className="emotion-6 emotion-7"
          >
            angle_right
          </i>
        </Icon>
      </div>
    </Arrow>
    <Item
      disabled={true}
      index={3}
      key="3_item"
      label="ANALYZE"
      path="/search/review/analyze"
    >
      <NavLink
        className="emotion-4 emotion-0"
        disabled={true}
        emphasized={false}
        external={false}
        key="3"
        to="/search/review/analyze"
      >
        <a
          className="emotion-0 emotion-29 emotion-2"
        >
          ANALYZE
        </a>
      </NavLink>
    </Item>
    <Arrow
      key="3_arrow"
    >
      <div
        className="emotion-8 emotion-9"
      >
        <Icon
          name="angle_right"
          squared={true}
        >
          <i
            className="emotion-6 emotion-7"
          >
            angle_right
          </i>
        </Icon>
      </div>
    </Arrow>
    <Item
      emphasized={true}
      external={true}
      index={4}
      key="4_item"
      label="SHARE"
      path="/search/review/analyze/share"
    >
      <NavLink
        className="emotion-4 emotion-0"
        disabled={false}
        emphasized={true}
        external={true}
        key="4"
        to="/search/review/analyze/share"
      >
        <a
          className="emotion-0 emotion-38 emotion-2"
          href="/search/review/analyze/share"
        >
          SHARE
        </a>
      </NavLink>
    </Item>
  </nav>
</Breadcrumb>
`;

exports[`renders x amount of Breadcrumb separators 1`] = `
<div
  data-context="separator"
/>
`;
